# docs/swagger.json
@@ -28,6 +28,35 @@
                 }
             }
         },
+        "/yt/analyse/video/{video_id}": {
+            "get": {
+                "description": "Returns Sentiment analyse of all video comments",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Yt"
+                ],
+                "summary": "list analyse detail of video comments",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "videoID",
+                        "name": "video_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pong",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/yt/list/videos/{channelID}": {
             "get": {
                 "description": "Returns list of  Youtube videos with channel id",
@@ -42,7 +71,7 @@
                     {
                         "type": "string",
                         "description": "channelId",
-                        "name": "channelID",
+                        "name": "channel_id",
                         "in": "path",
                         "required": true
                     }
